--- a/radcapradio/metadata.desktop
+++ b/radcapradio/metadata.desktop
@@ -4,9 +4,11 @@ Comment=Stream radio channels from radcap.ru
 Type=Service
 Icon=media-playback-start
 ServiceTypes=Plasma/Applet
+X-Plasma-API=declarativeappletscript
+X-Plasma-MainScript=ui/main.qml
 X-KDE-PluginInfo-Author=Unknown
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-Name=radcapradio
-X-KDE-PluginInfo-Version=0.1
+X-KDE-PluginInfo-Version=0.2
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
