Clarify installation and restore Plasma API

--- a/radcapradio/metadata.desktop
+++ b/radcapradio/metadata.desktop
@@ -7,6 +7,8 @@ ServiceTypes=Plasma/Applet
 X-KDE-PluginInfo-Author=Unknown
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-Name=radcapradio
-X-KDE-PluginInfo-Version=0.1
+X-KDE-PluginInfo-Version=0.2
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
+X-Plasma-API=declarativeappletscript
+X-Plasma-MainScript=ui/main.qml
