--- a/radcapradio/metadata.desktop
+++ b/radcapradio/metadata.desktop
@@ -3,7 +3,7 @@ Name=RadCap Radio
 Comment=Stream radio channels from radcap.ru
 Type=Service
 Icon=media-playback-start
-ServiceTypes=Plasma/Applet
+X-KDE-ServiceTypes=Plasma/Applet
 X-KDE-PluginInfo-Author=Unknown
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-Name=radcapradio
@@ -11,4 +11,5 @@ X-KDE-PluginInfo-Version=0.2
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
 X-Plasma-API=declarativeappletscript
+X-Plasma-API-Minimum-Version=6.0
 X-Plasma-MainScript=ui/main.qml
