Fix type errors and declare Plasma 6 compatibility

--- a/radcapradio/metadata.desktop
+++ b/radcapradio/metadata.desktop
@@ -3,7 +3,8 @@ Name=RadCap Radio
 Comment=Stream radio channels from radcap.ru
 Type=Service
 Icon=media-playback-start
-ServiceTypes=Plasma/Applet
+X-KDE-ServiceTypes=Plasma/Applet
+X-Plasma-API-Minimum-Version=6.0
 X-KDE-PluginInfo-Author=Unknown
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-Name=radcapradio
